Update project references from Naya Dashboard to MegaPlug Dashboard and adjust environment configurations accordingly

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <title>Naya Dashboard</title>
+        <title>MegaPlug Dashboard</title>
         <meta charset="utf-8" />
         <meta
             name="description"
