--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
         <link rel="icon" type="image/png" href="favicon-32x32.png" />
 
         <!-- Fonts -->
-        <link href="fonts/inter/inter.css" rel="stylesheet" />
+        <link href="/fonts/inter/inter.css" rel="stylesheet" />
         <link href="https://fonts.gstatic.com" rel="preconnect" />
 
         <link
@@ -39,7 +39,7 @@
         />
 
         <!-- Splash screen styles -->
-        <link href="styles/splash-screen.css" rel="stylesheet" />
+        <link href="/styles/splash-screen.css" rel="stylesheet" />
         <!-- firebase notifications -->
         <link rel="manifest" href="./manifest.json">
     </head>
