working on maps

--- a/src/index.html
+++ b/src/index.html
@@ -42,6 +42,7 @@
         <link href="/styles/splash-screen.css" rel="stylesheet" />
         <!-- firebase notifications -->
         <link rel="manifest" href="./manifest.json">
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDN_RL4wAIlysTnHLflgdZ5piV82otKeMI&libraries=places,geometry"></script>
     </head>
 
     <body>
