--- a/src/index.html
+++ b/src/index.html
@@ -20,9 +20,10 @@
         <base href="/" />
 
         <!-- Favicon -->
-        <link rel="icon" type="image/png" href="favicon-16x16.png" />
-        <link rel="icon" type="image/png" href="favicon-32x32.png" />
-
+        <!-- <link rel="icon" type="image/png" href="favicon-16x16.png" />
+        <link rel="icon" type="image/png" href="favicon-32x32.png" /> -->
+        <link id="appFavicon" rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
+        
         <!-- Fonts -->
         <link href="/fonts/inter/inter.css" rel="stylesheet" />
         <link href="https://fonts.gstatic.com" rel="preconnect" />
@@ -48,12 +49,6 @@
     <body>
         <!-- Splash screen -->
         <fuse-splash-screen>
-            <img src="images/logo/logo.svg" alt="Fuse logo" />
-            <div class="spinner">
-                <div class="bounce1"></div>
-                <div class="bounce2"></div>
-                <div class="bounce3"></div>
-            </div>
         </fuse-splash-screen>
 
         <!-- App root -->
