change dashboard cibtebt for meta tag

--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,7 @@
         <meta charset="utf-8" />
         <meta
             name="description"
-            content="NAYA Wellness Resort, the first Medical & Wellness Resort in Egypt. Located in El Saf, Giza Governorate,
-            the resort offers individuals a serene and charming environment to enhance their well-being"
+            content="MegaPlug Dashboard"
         />
         <meta
             name="keywords"
